gloo-auth-oidc/resources/dex-oidc-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petclinic-80
            namespace: gloo-system
    options:
      extauth:
        configRef:
          name: oidc-dex
          namespace: gloo-system
